# fastapi-hex-boilerplate

./: .coveragerc  Dockerfile  README.md  alembic.ini  app.code-workspace  docker-compose.yml  pyproject.toml  pytest.ini
app/: __init__.py  __main__.py
app/api/: __init__.py  app.py  container.py
app/api/routers/: __init__.py  root.py
app/infra/database/: seeds.py  sqlalchemy.py
app/infra/database/alembic/: env.py  script.py.mako
scripts/: __init__.py
scripts/pgsql-db/: init_db.sql
tests/factories/: entity_factories.py  model_factories.py
tests/integration/api/: conftest.py
tests/integration/infra/database/repositories/: conftest.py
tests/unit/config/: environment_test.py
tests/utils/: auth.py  database.py
